--- a/generate_latpreds.ipynb
+++ b/generate_latpreds.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-27 12:31:55.450882: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-12-27 12:31:55.450904: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-12-28 09:10:18.054242: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-12-28 09:10:18.054271: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
     "    \"noun_xsum_b12\": ['reversed_xsum_beam12/', 'nounxsumbeam12v2.csv'],\n",
     "    \"noun_xsum_b50\": ['reversed_xsum_beam50/', 'nounxsumbeam50v2.csv'],\n",
     "}\n",
-    "curcol = \"mt_fren_b50\"\n",
+    "curcol = \"mt_fren_b12\"\n",
     "gsuffix = col[curcol][0]\n",
     "expl_fname = col[curcol][1]\n",
     "base = \"outputs/graph_pickles/\"+gsuffix\n",
@@ -87,7 +87,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at xlm-roberta-large were not used when initializing XLMRobertaModel: ['lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'roberta.pooler.dense.weight', 'lm_head.bias', 'lm_head.decoder.weight', 'roberta.pooler.dense.bias', 'lm_head.dense.bias', 'lm_head.dense.weight']\n",
+      "Some weights of the model checkpoint at xlm-roberta-large were not used when initializing XLMRobertaModel: ['roberta.pooler.dense.weight', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'roberta.pooler.dense.bias']\n",
       "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Encoder model frozen.\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "15280f8f-e8c8-4a75-b58d-0def378d295a",
    "metadata": {},
    "outputs": [],
@@ -145,24 +145,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f8d02192-1e2c-49cd-8a54-fc3d157022b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latpreds = all_lattice_multi(1, default_scofunct, randomsingle, args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bc7b283b-2c26-4089-9ae4-73902c0a102c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(explode_df[explode_df['ref']==worseuns[7]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "151bcbc9-98cf-44b1-906b-1745f78bd4a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Portsmouth moved into the League Two play-off places with victory at Notts County thanks to two goals from Luke Bennett.'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latpreds['gold'][0] # maybe there's a tokenization mismatch? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c109270e-a15e-45e1-a9a9-8f8d35495daf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "448   448   tensor(0.7896, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8043, device='cuda:2', grad_fn=<SumBackward0>)  \n",
-      "449   449   tensor(0.7688, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7780, device='cuda:2', grad_fn=<SumBackward0>)  \n",
-      "450   450   tensor(0.7494, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7494, device='cuda:2', grad_fn=<SumBackward0>)  \n",
-      "451   451   tensor(0.7364, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7307, device='cuda:2', grad_fn=<SumBackward0>)  \n",
-      "452   452   tensor(0.8575, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8493, device='cuda:2', grad_fn=<SumBackward0>)  \n"
+      "Plans for two new \"metro mayors\" in Yorkshire are set to be unveiled by the chancellor.   tensor(0.5141, device='cuda:2', grad_fn=<SumBackward0>)\n",
+      "Plans for two new \" metro mayors \" in Yorkshire are set to be unveiled by the chancellor.   tensor(0.5366, device='cuda:2', grad_fn=<SumBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "latpreds = all_lattice_multi(1, weightaddprob , randomsingle, args)"
+    "ind = 6\n",
+    "print(latpreds['gold'][ind], \" \", latpreds['goldsco'][ind])\n",
+    "print(latpreds['hyp'][ind], \" \", latpreds['hypsco'][ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78c0040e-a951-498b-95ae-8b629fe9f100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for l in list(latpreds['hyp']):\n",
+    "    if l not in explode_df['hyp']:\n",
+    "        print(\"o\")\n",
+    "    else:\n",
+    "        printn(\"i\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "138d7b71-faf3-4939-a529-09fa4418a397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "worseuns = latpreds[latpreds['hypsco']<latpreds['goldsco']]['ref'].unique()"
    ]
   },
   {
@@ -229,12 +304,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4158653d-2784-4932-ab31-8eba6e800ea2",
+   "execution_count": 18,
+   "id": "6e336565-9922-4ebf-8326-9e1b165348b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hyp         Negotiations with Iran on its nuclear programm...\n",
+      "hypsco      tensor(0.7139, device='cuda:2', grad_fn=<SumBa...\n",
+      "gold        Negotiations with Iran on its nuclear programm...\n",
+      "goldsco     tensor(0.7139, device='cuda:2', grad_fn=<SumBa...\n",
+      "ascos                                    [0.7138539552688599]\n",
+      "ahyps       [Negotiations with Iran on its nuclear program...\n",
+      "numnodes                                                  174\n",
+      "src         Les négociations avec l’Iran sur son programme...\n",
+      "ref         As a result, the negotiations with Iran over i...\n",
+      "Name: 1, dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>src</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>hyp</th>\n",
+       "      <th>dcqeold</th>\n",
+       "      <th>comet</th>\n",
+       "      <th>cqe</th>\n",
+       "      <th>posthoc</th>\n",
+       "      <th>dupcqe</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4946</th>\n",
+       "      <td>4946</td>\n",
+       "      <td>Les négociations avec l’Iran sur son programme...</td>\n",
+       "      <td>As a result, the negotiations with Iran over i...</td>\n",
+       "      <td>Negotiations with Iran on its nuclear programm...</td>\n",
+       "      <td>0.787222</td>\n",
+       "      <td>0.807614</td>\n",
+       "      <td>0.641687</td>\n",
+       "      <td>0.347093</td>\n",
+       "      <td>0.764838</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                                src  \\\n",
+       "4946        4946  Les négociations avec l’Iran sur son programme...   \n",
+       "\n",
+       "                                                    ref  \\\n",
+       "4946  As a result, the negotiations with Iran over i...   \n",
+       "\n",
+       "                                                    hyp   dcqeold     comet  \\\n",
+       "4946  Negotiations with Iran on its nuclear programm...  0.787222  0.807614   \n",
+       "\n",
+       "           cqe   posthoc    dupcqe  \n",
+       "4946  0.641687  0.347093  0.764838  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "latpreds"
+    "tind = 1\n",
+    "print(latpreds.loc[tind])\n",
+    "explode_df[explode_df['hyp']==latpreds['gold'][tind]]"
    ]
   },
   {
@@ -247,9 +408,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.7406, device='cuda:2', grad_fn=<DivBackward0>)\n",
-      "tensor(0.7250, device='cuda:2', grad_fn=<DivBackward0>)\n",
-      "tensor(0.0157, device='cuda:2', grad_fn=<SubBackward0>)\n"
+      "tensor(0.6816, device='cuda:2', grad_fn=<DivBackward0>)\n",
+      "tensor(0.6771, device='cuda:2', grad_fn=<DivBackward0>)\n",
+      "tensor(0.0045, device='cuda:2', grad_fn=<SubBackward0>)\n"
      ]
     }
    ],
@@ -257,6 +418,16 @@
     "print(mean(latpreds['goldsco']))\n",
     "print(mean(latpreds['hypsco']))\n",
     "print(mean(latpreds['goldsco'])-mean(latpreds['hypsco']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d409a86a-51c0-4c22-931b-c9d05a24de20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goldsco"
    ]
   },
   {
