--- a/generate_latpreds.ipynb
+++ b/generate_latpreds.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-28 09:10:18.054242: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-12-28 09:10:18.054271: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-12-29 08:05:56.892611: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-12-29 08:05:56.892637: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -64,11 +64,11 @@
     "    \"noun_xsum_b12\": ['reversed_xsum_beam12/', 'nounxsumbeam12v2.csv'],\n",
     "    \"noun_xsum_b50\": ['reversed_xsum_beam50/', 'nounxsumbeam50v2.csv'],\n",
     "}\n",
-    "curcol = \"mt_fren_b12\"\n",
+    "curcol = \"noun_xsum_b12\"\n",
     "gsuffix = col[curcol][0]\n",
     "expl_fname = col[curcol][1]\n",
     "base = \"outputs/graph_pickles/\"+gsuffix\n",
-    "goldmetric = \"dupcqe\"\n",
+    "goldmetric = \"utnoun\"\n",
     "explode_df = pd.read_csv(\"outputs/score_csvs/\"+expl_fname)\n",
     "#TODO switch back for french-english\n",
     "if \"fren\" in curcol:\n",
@@ -87,11 +87,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at xlm-roberta-large were not used when initializing XLMRobertaModel: ['roberta.pooler.dense.weight', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'roberta.pooler.dense.bias']\n",
+      "Some weights of the model checkpoint at xlm-roberta-large were not used when initializing XLMRobertaModel: ['lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'roberta.pooler.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.bias', 'roberta.pooler.dense.weight', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Encoder model frozen.\n",
-      "Loading weights from /mnt/data1/prasann/latticegen/lattice-generation/COMET/lightning_logs/version_43/checkpoints/epoch=3-step=130000.ckpt.\n"
+      "Loading weights from /mnt/data1/prasann/latticegen/lattice-generation/COMET/lightning_logs/version_44/checkpoints/epoch=9-step=40000.ckpt.\n"
      ]
     },
     {
@@ -145,10 +145,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f8d02192-1e2c-49cd-8a54-fc3d157022b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "584   584   tensor(0.8009, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8009, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "585   585   tensor(0.5751, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.5751, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "586   586   tensor(0.9163, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.9163, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "587   587   tensor(0.7515, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7515, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "588   588   tensor(0.7310, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7310, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "589   589   tensor(0.8298, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8298, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "590   590   tensor(0.8404, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8404, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "591   591   tensor(1.2070, device='cuda:2', grad_fn=<SumBackward0>)   tensor(1.2070, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "592   592   tensor(0.6195, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.6195, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "593   593   tensor(0.7418, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7418, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "594   594   tensor(0.8301, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.8301, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "595   595   tensor(0.5909, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.5909, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "596   596   tensor(0.7271, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7271, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "597   597   tensor(0.5117, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.5117, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "598   598   tensor(1.3371, device='cuda:2', grad_fn=<SumBackward0>)   tensor(1.3371, device='cuda:2', grad_fn=<SumBackward0>)  \n",
+      "599   599   tensor(0.7068, device='cuda:2', grad_fn=<SumBackward0>)   tensor(0.7068, device='cuda:2', grad_fn=<SumBackward0>)  \n"
+     ]
+    }
+   ],
    "source": [
     "latpreds = all_lattice_multi(1, default_scofunct, randomsingle, args)"
    ]
@@ -408,9 +431,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6816, device='cuda:2', grad_fn=<DivBackward0>)\n",
-      "tensor(0.6771, device='cuda:2', grad_fn=<DivBackward0>)\n",
-      "tensor(0.0045, device='cuda:2', grad_fn=<SubBackward0>)\n"
+      "tensor(0.8481, device='cuda:2', grad_fn=<DivBackward0>)\n",
+      "tensor(0.8480, device='cuda:2', grad_fn=<DivBackward0>)\n",
+      "tensor(6.0797e-05, device='cuda:2', grad_fn=<SubBackward0>)\n"
      ]
     }
    ],
