--- a/generate_tables.ipynb
+++ b/generate_tables.ipynb
@@ -717,7 +717,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "latclone",
    "language": "python",
    "name": "python3"
   },
@@ -731,7 +731,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.12 (default, Oct 12 2021, 13:49:34) \n[GCC 7.5.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3dd1fda623ffdbba32b38a5ab9dce1161f37a6915aceabbd014601f87258a96e"
+   }
   }
  },
  "nbformat": 4,
