Setting up timing experiments

--- a/table_gen.ipynb
+++ b/table_gen.ipynb
@@ -8,7 +8,20 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import encode_utils.rerank_data as rd\n"
+    "import encode_utils.rerank_data as rd\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "918f4c9f-8a53-4b90-a698-605470490c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"outputs/graph_pickles/exploded_tabtotext_lattice/5\"\n",
+    "with open(fname, \"rb\") as file:\n",
+    "    explvals = pickle.load(file)"
    ]
   },
   {
@@ -66,10 +79,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "print(\"target \",rd.rerank_df(score_df, rd.rerank_nogold, [\"posthoc\", \"dupcqe\"]))\n",
-    "\n"
+    "print(\"target \",rd.rerank_df(score_df, rd.rerank_nogold, [\"posthoc\", \"dupcqe\"]))"
    ]
   },
   {
