--- a/tmp.ipynb
+++ b/tmp.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-08 06:48:35.916458: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-01-08 06:48:35.916481: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2023-01-09 12:24:19.545653: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-01-09 12:24:19.545696: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -670,20 +670,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "b62df8a4-928f-494c-b083-561464ce3aae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ['apple man', 'apple man', 'b', 'b', 'c']\n",
+    "b = ['apple man', 'b']\n",
+    "c = [1, 2]\n",
+    "adf = pd.DataFrame()\n",
+    "bdf = pd.DataFrame()\n",
+    "adf['col1'] = a\n",
+    "bdf['col1'] = b\n",
+    "bdf['col2'] = c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a7d5a7bc-81c2-4604-aa38-03251c21c2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = pd.merge(adf, bdf, on='col1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3679531c-5bd3-4b21-a267-7c0ffa068811",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    (apple, man)\n",
+       "1    (apple, man)\n",
+       "2             (b)\n",
+       "3             (b)\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(tmp)/len(rerdf))"
+    "merged.apply(lambda x: nlp(x.col1), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0bb98a47-c7a0-433f-b734-89e78130f545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "62c32890-f3c8-48a0-bbfa-a84589feda9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_sm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c7791823-cb1d-48a0-9181-ae516e5d9783",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp(\"\")"
    ]
   }
  ],
