more organized code with README, still not yet super easy/convenient to use

--- a/old_exploration/translation_oldcode/cometqe_retrain.ipynb
+++ b/old_exploration/translation_oldcode/cometqe_retrain.ipynb
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "from rerank_score_cands_new import load_cands\n",
     "import numpy as np\n",
-    "from comet import download_model, load_from_checkpoint\n",
+    "from tfr_models import download_model, load_from_checkpoint\n",
     "import pickle\n",
     "\n",
     "csv.field_size_limit(sys.maxsize)\n"
