--- a/old_exploration/translation_oldcode/makedata.ipynb
+++ b/old_exploration/translation_oldcode/makedata.ipynb
@@ -633,7 +633,7 @@
     }
    ],
    "source": [
-    "from comet import download_model, load_from_checkpoint\n",
+    "from tfr_models import download_model, load_from_checkpoint\n",
     "\n",
     "cometqe_path = download_model(cometqe_model, cometqe_dir)\n",
     "model = load_from_checkpoint(cometqe_path).to(device)"
