--- a/old_exploration/debug/debug_training.ipynb
+++ b/old_exploration/debug/debug_training.ipynb
@@ -34,7 +34,7 @@
     "import pandas as pd\n",
     "from rerank_score_cands_new import load_cands\n",
     "import numpy as np\n",
-    "from comet import download_model, load_from_checkpoint\n",
+    "from tfr_models import download_model, load_from_checkpoint\n",
     "import pickle\n",
     "from sklearn.utils import shuffle\n",
     "#from distill_comet import XLMCometRegressor\n",
