--- a/old_exploration/old_notebooks/test_comet.ipynb
+++ b/old_exploration/old_notebooks/test_comet.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from comet import download_model, load_from_checkpoint\n",
+    "from tfr_models import download_model, load_from_checkpoint\n",
     "from typing import List\n",
     "import json"
    ]
